Deixando a imagem menor via jlink e também adicionada a imagem Nativa